--- a/excercise/case_study/contract.html
+++ b/excercise/case_study/contract.html
@@ -2,16 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Danh sách khách hàng</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
 <!--Navigation-->
 <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #addccf;">
         <a class="navbar-brand" href="#">
             <img src="./image/Logo-FURAMA-RESORT-removebg-preview.png" height="75">
         </a>
@@ -29,38 +30,102 @@
         </div>
     </nav>
 </header>
-<h1 class="text-center" style="color: red">Sửa thông tin dịch vụ</h1>
-<form>
-    <div class="form-group">
-        <label for="name">Tên dịch vụ</label>
-        <input type="text" class="form-control" id="name" placeholder="Nhập tên dịch vụ">
+<section class="vh-100 bg-image">
+    <div class="bg-image h-100"
+         style="background-image: url('./image/resort-phan-rang-18.jpeg');">
+        <div class="mask d-flex align-items-center h-100" style="background-color: rgba(0,0,0,.25);">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-12">
+                        <div class="card bg-dark shadow-2-strong">
+                            <div class="card-body">
+                                <div class="table-responsive">
+                                    <table class="table table-dark table-borderless mb-0">
+                                        <thead>
+                                        <tr style="text-align: center ; color: red">
+                                            <th>
+                                                <a href="create-contract.html" class="btn btn-primary btn-sm">Thêm mới hợp đồng</a>
+                                            </th>
+                                            <th colspan="9">
+                                                Danh sách hợp đồng
+                                            </th>
+                                        </tr>
+                                        <tr>
+                                            <th scope="col">Số hợp đồng</th>
+                                            <th scope="col">Ngày bắt đầu</th>
+                                            <th scope="col">Ngày kết thúc</th>
+                                            <th scope="col">Số tiền cọc trước</th>
+                                            <th scope="col">Tổng số tiền thanh toán</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        <tr>
+                                            <th scope="row">0001</th>
+                                            <td>1993/03/09</td>
+                                            <td>1993/03/09</td>
+                                            <td>300.000.000</td>
+                                            <td>500.000.000</td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row">0001</th>
+                                            <td>1993/03/09</td>
+                                            <td>1993/03/09</td>
+                                            <td>300.000.000</td>
+                                            <td>500.000.000</td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row">0001</th>
+                                            <td>1993/03/09</td>
+                                            <td>1993/03/09</td>
+                                            <td>300.000.000</td>
+                                            <td>500.000.000</td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row">0001</th>
+                                            <td>1993/03/09</td>
+                                            <td>1993/03/09</td>
+                                            <td>300.000.000</td>
+                                            <td>500.000.000</td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row">0001</th>
+                                            <td>1993/03/09</td>
+                                            <td>1993/03/09</td>
+                                            <td>300.000.000</td>
+                                            <td>500.000.000</td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row">0001</th>
+                                            <td>1993/03/09</td>
+                                            <td>1993/03/09</td>
+                                            <td>300.000.000</td>
+                                            <td>500.000.000</td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row">0001</th>
+                                            <td>1993/03/09</td>
+                                            <td>1993/03/09</td>
+                                            <td>300.000.000</td>
+                                            <td>500.000.000</td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row">0001</th>
+                                            <td>1993/03/09</td>
+                                            <td>1993/03/09</td>
+                                            <td>300.000.000</td>
+                                            <td>500.000.000</td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="form-group">
-        <label for="area">Diện tích sử dụng</label>
-        <input type="text" class="form-control" id="area" placeholder="Nhập diện tích sử dụng">
-    </div>
-    <div class="form-group">
-        <label for="price">Chi phí thuê</label>
-        <input type="text" class="form-control" id="price" placeholder="Nhập chi phí thuê">
-    </div>
-    <div class="form-group">
-        <label for="maxPeople">Số lượng người tối đa</label>
-        <input type="text" class="form-control" id="maxPeople" placeholder="Nhập số lượng người tối đa">
-    </div>
-    <div class="form-group">
-        <label for="type">Kiểu thuê</label>
-        <input type="text" class="form-control" id="type" placeholder="Nhập kiểu thuê">
-    </div>
-    <div class="form-group">
-        <label for="dichVu">Dịch vụ đi kèm</label>
-        <input type="text" class="form-control" id="dichVu" placeholder="Nhập dịch vụ đi kèm">
-    </div>
-    <div class="form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">Check me out</label>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+</section>
 <div class="footer">
     <div class="container">
         <div class="row">
@@ -936,8 +1001,6 @@
                                 icon: locations[count1][4]
                             });
                         }
-
-
                     }
                 </script>
 
@@ -946,5 +1009,38 @@
         </div>
     </div>
 </div>
+<!--Modal xoá-->
+<div class="modal fade" id="modelId" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title"> Xóa cầu thủ </h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <form action="/soccer-player/delete">
+                <div class="modal-body">
+                    <input type="hidden" name="deleteId" id="deleteId">
+                    <span>Bạn có chắc muốn xóa </span> <span id="deleteName"></span>?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Huỷ</button>
+                    <button type="submit" class="btn btn-danger">Xoá</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+<script src="js/bootstrap.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 </html>
