--- a/excercise/case_study/create.html
+++ b/excercise/case_study/create.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Thêm mới dịch vụ</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
 <!--Navigation-->
@@ -29,34 +30,61 @@
         </div>
     </nav>
 </header>
-<h1 class="text-center" style="color: red">Thêm mới dịch vụ</h1>
-<form>
-    <div class="form-group">
-        <label for="name">Tên dịch vụ</label>
-        <input type="text" class="form-control" id="name" placeholder="Nhập tên dịch vụ">
+<section class="vh-100 bg-image"
+         style="background-image: url('./image/N.NT-31-1024x676.jpg') ">
+    <div class="mask d-flex align-items-center h-100 gradient-custom-3">
+        <div class="container h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+                    <div class="card" style="border-radius: 15px; ">
+                        <div class="card-body p-5">
+                            <h2 class="text-uppercase text-center mt-4">Thêm mới dịch vụ</h2>
+                            <form>
+
+                                <div class="form-outline mb-4">
+                                    <label class="form-label" for="form3Example1cg">Tên dịch vụ</label>
+                                    <span class="text-danger">*</span>
+                                    <input type="text" id="form3Example1cg" class="form-control form-control-lg"/>
+                                </div>
+
+                                <div class="form-outline mb-4">
+                                    <label class="form-label" for="form3Example3cg">Diện tích sử dụng</label>
+                                    <span class="text-danger">*</span>
+                                    <input type="number" id="form3Example3cg" class="form-control form-control-lg"/>
+                                </div>
+
+                                <div class="form-outline mb-4">
+                                    <label class="form-label" for="form3Example4cg">Chi phí thuê</label>
+                                    <span class="text-danger">*</span>
+                                    <input type="number" id="form3Example4cg" class="form-control form-control-lg"/>
+                                </div>
+
+                                <div class="form-outline mb-4">
+                                    <label class="form-label" for="form3Example4cdg">Số lượng người thuê tối đa</label>
+                                    <span class="text-danger">*</span>
+                                    <input type="number" id="form3Example4cdg" class="form-control form-control-lg"/>
+
+                                </div>
+                                <div class="form-outline mb-4">
+                                    <label class="form-label" for="form4Example4cdg">Kiểu thuê</label>
+                                    <span class="text-danger">*</span>
+                                    <input type="number" id="form4Example4cdg" class="form-control form-control-lg"/>
+                                </div>
+
+                                <div class="d-flex justify-content-center">
+                                    <button type="button"
+                                            class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Cập
+                                        nhật
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="form-group">
-        <label for="area">Diện tích sử dụng</label>
-        <input type="text" class="form-control" id="area" placeholder="Nhập diện tích sử dụng">
-    </div>
-    <div class="form-group">
-        <label for="price">Chi phí thuê</label>
-        <input type="text" class="form-control" id="price" placeholder="Nhập chi phí thuê">
-    </div>
-    <div class="form-group">
-        <label for="maxPeople">Số lượng người tối đa</label>
-        <input type="text" class="form-control" id="maxPeople" placeholder="Nhập số lượng người tối đa">
-    </div>
-    <div class="form-group">
-        <label for="type">Kiểu thuê</label>
-        <input type="text" class="form-control" id="type" placeholder="Nhập kiểu thuê">
-    </div>
-    <div class="form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">Check me out</label>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+</section>
 <div class="footer">
     <div class="container">
         <div class="row">
