--- a/excercise/case_study/update-customer.html
+++ b/excercise/case_study/update-customer.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Thêm mới dịch vụ</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
 <!--Navigation-->
@@ -29,46 +30,95 @@
         </div>
     </nav>
 </header>
-<h1 class="text-center" style="color: red">Sửa thông tin dịch vụ</h1>
-<form>
-    <div class="form-group">
-        <label for="name">Tên dịch vụ</label>
-        <input type="text" class="form-control" id="name" placeholder="Nhập tên dịch vụ">
-    </div>
-    <div class="form-group">
-        <label for="area">Diện tích sử dụng</label>
-        <input type="text" class="form-control" id="area" placeholder="Nhập diện tích sử dụng">
-    </div>
-    <div class="form-group">
-        <label for="price">Chi phí thuê</label>
-        <input type="text" class="form-control" id="price" placeholder="Nhập chi phí thuê">
-    </div>
-    <div class="form-group">
-        <label for="maxPeople">Số lượng người tối đa</label>
-        <input type="text" class="form-control" id="maxPeople" placeholder="Nhập số lượng người tối đa">
-    </div>
-    <div class="form-group">
-        <label for="type">Kiểu thuê</label>
-        <input type="text" class="form-control" id="type" placeholder="Nhập kiểu thuê">
-    </div>
-    <div class="form-group">
-        <label for="room">Tiêu chuẩn phòng</label>
-        <input type="text" class="form-control" id="room" placeholder="Nhập tiêu chuẩn phòng">
-    </div>
-    <div class="form-group">
-        <label for="describe">Mô tả</label>
-        <input type="text" class="form-control" id="describe" placeholder="Nhập mô tả thêm">
-    </div>
-    <div class="form-group">
-        <label for="tang">Số tầng</label>
-        <input type="text" class="form-control" id="tang" placeholder="Nhập số tầng">
-    </div>
-    <div class="form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">Check me out</label>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+<section class="vh-100 bg-image"
+         style="background-image: url('./image/N.NT-31-1024x676.jpg') ">
+    <div class="mask d-flex align-items-center h-100 gradient-custom-3">
+        <div class="container h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+                    <div class="card" style="border-radius: 15px; ">
+                        <div class="card-body p-5">
+                            <div class="card-body p-5">
+                                <h2 class="text-uppercase text-center mt-4">Cập nhật khách hàng</h2>
+                                <form>
+
+                                    <div class="form-outline mb-4">
+                                        <label class="form-label" for="form3Example1cg">Họ và tên</label>
+                                        <span class="text-danger">*</span>
+                                        <input class="form-control form-control-lg" id="form3Example1cg" type="text"/>
+                                    </div>
+
+                                    <div class="form-outline mb-4">
+                                        <label class="form-label" for="form3Example3cg">Ngày sinh</label>
+                                        <span class="text-danger">*</span>
+                                        <input class="form-control form-control-lg" id="form3Example3cg" type="date"/>
+                                    </div>
+
+                                    <label class="form-label">Giới tính</label>
+                                    <span class="text-danger">*</span>
+                                    <div class="form-check form-check-inline" style="margin-left: 20px">
+                                        <input class="form-check-input" id="inlineRadio1" name="inlineRadioOptions"
+                                               type="radio" value="option1">
+                                        <label class="form-check-label" for="inlineRadio1">Nam</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" id="inlineRadio2" name="inlineRadioOptions"
+                                               type="radio" value="option2">
+                                        <label class="form-check-label" for="inlineRadio2">Nữ</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" id="inlineRadio3" name="inlineRadioOptions"
+                                               type="radio" value="option3">
+                                        <label class="form-check-label" for="inlineRadio3">Khác</label>
+                                    </div>
+
+
+                                    <div class="form-outline mb-4">
+                                        <label class="form-label" for="form3Example4cdg">Số CMND</label>
+                                        <span class="text-danger">*</span>
+                                        <input class="form-control form-control-lg" id="form3Example4cdg" type="number"/>
+
+                                    </div>
+                                    <div class="form-outline mb-4">
+                                        <label class="form-label" for="form5Examplecdg">Số điện thoại</label>
+                                        <span class="text-danger">*</span>
+                                        <input class="form-control form-control-lg" id="form5Examplecdg" type="number"/>
+                                    </div>
+                                    <div class="form-outline mb-4">
+                                        <label class="form-label" for="form7Example4cdg">Email</label>
+                                        <span class="text-danger">*</span>
+                                        <input class="form-control form-control-lg" id="form7Example4cdg" type="text"/>
+                                    </div>
+
+                                    <div class="form-outline mb-4">
+                                        <label class="form-label" for="form8Example4cdg">Địa chỉ</label>
+                                        <span class="text-danger">*</span>
+                                        <input class="form-control form-control-lg" id="form8Example4cdg" type="text"/>
+                                    </div>
+
+                                    <label class="form-label">Loại khách</label>
+                                    <span class="text-danger">*</span>
+                                    <select aria-label="Default select example" class="form-select"
+                                            style="height: 50px; margin-bottom: 30px">
+                                        <option selected value="1">One</option>
+                                        <option value="2">Two</option>
+                                        <option value="3">Three</option>
+                                    </select>
+
+                                    <div class="d-flex justify-content-center">
+                                        <button class="btn btn-success btn-block btn-lg gradient-custom-4 text-body"
+                                                type="button">Cập
+                                            nhật
+                                        </button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+</section>
 <div class="footer">
     <div class="container">
         <div class="row">
