--- a/html/home.html
+++ b/html/home.html
@@ -35,7 +35,7 @@
 <!-- header section start -->
 <div class="header_section">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="logo"><a href="index.html"><img src="images/logo.png"></a></div>
+        <div class="logo"><a href="home.html"><img src="images/logo.png"></a></div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -43,16 +43,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">HOME</a>
+                    <a class="nav-link" href="home.html">Trang chủ</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="about.html">ABOUT</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="product.html">OUR PRODUCTS</a>
+                    <a class="nav-link" href="product.html">Sản phẩm</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="video.html">VIDEO GAMES</a>
+                    <a class="nav-link" href="video.html">Hướng dẫn</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="remot.html">REMOT CONTROL</a>
