--- a/sprint_2/figure-shop/public/index.html
+++ b/sprint_2/figure-shop/public/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="css/figure-detail.css">
 
     <title>React App</title>
+    <link rel="stylesheet" href="css/cart.css">
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
