--- a/sprint_2/figure-shop/public/index.html
+++ b/sprint_2/figure-shop/public/index.html
@@ -21,12 +21,13 @@
     <link rel="stylesheet" href="css/slide.css">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <link rel="stylesheet" href="css/figure-detail.css">
-
     <title>React App</title>
+    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/product.css">
     <link rel="stylesheet" href="css/cart.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
-<noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
 <script src="/js/home.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
