--- a/sprint_2/figure-shop/public/index.html
+++ b/sprint_2/figure-shop/public/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="css/product.css">
     <link rel="stylesheet" href="css/cart.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="css/information.css">
 </head>
 <body>
 <div id="root"></div>
